Segundo commit do dia 04

--- a/04_10_2019/Ex_1.html
+++ b/04_10_2019/Ex_1.html
@@ -9,6 +9,7 @@
 <a href="sms:55-22-988093717">Enviar mensagem</a>
 <a href="mailto:idkhowtopvp@gmail.com">Enviar email</a>
 <a href="whatsapp://send?abid=55-22-988093717&text=Jojo%2C%20World! Ximbas">Enviar Zap</a>
+<a href="callto:55-22-988093717">Ligar Yan</a>
 </body>
 
 </html>
