--- a/04_10_2019/Ex_1.html
+++ b/04_10_2019/Ex_1.html
@@ -5,11 +5,11 @@
 	<title>Ex1 04102019</title>
 </head>
 <body>
-<a href="tel:55-22-988093717">Ligar para telefone</a>
-<a href="sms:55-22-988093717">Enviar mensagem</a>
-<a href="mailto:idkhowtopvp@gmail.com">Enviar email</a>
-<a href="whatsapp://send?abid=55-22-988093717&text=Jojo%2C%20World! Ximbas">Enviar Zap</a>
-<a href="callto:55-22-988093717">Ligar Yan</a>
+<a href="tel:">Ligar para telefone</a>
+<a href="sms:">Enviar mensagem</a>
+<a href="mailto:">Enviar email</a>
+<a href="whatsapp://send?abid=&text=Jojo%2C%20World! Ximbas">Enviar Zap</a>
+<a href="callto:">Ligar Y</a>
 </body>
 
 </html>
