Sumário para lista

--- a/11_10_2019/Sumario novo.html
+++ b/11_10_2019/Sumario novo.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
 	<title>Sumario</title>
-	<meta charset="utf-8">
-	<meta name="author" content="Vítor Bernardo Sarmet">
 </head>
 
 <body>
-<h1>Sumário</h1>
 <ol>
-	<li><h2>Capitulo 1</h2>
+	<li><h1>Capitulo 1</h1></li>	
 	<ol>
 		<li><a href="capitulo1/introducao.html" target="_blank">Introducao</a></li>
 		<li><a href="capitulo1/fundamentos.html" target="_blank">Fundamentos</a></li>
-
-		<li><h3>Exercícios</h3>
+		<li><h2>Exercícios</h2></li>
 		<ol type="I">
 			<li><a href="capitulo1/exercicios/ex1.html" target="_blank">Exercício 1</a></li>
 			<li><a href="capitulo1/exercicios/ex2.html" target="_blank">Exercício 2</a></li>
 		</ol>
-		</li>
 	</ol>
-	</li>
 
-	<li><h2>Capitulo 2</h2>
+	<li><h1>Capitulo 2</h1></li>
 		<ol>
 			<li><a href="capitulo2/introducao.html" target="_blank">Introducao</a></li>
 		</ol>
-		</li>
 </ol>
-<br><br>
-<p>Veja mais no site do <a href="http://portal1.iff.edu.br/">IFFluminense</a></p>
+<br></br>
+<p>Veja mais no site do <a href="http://portal1.iff.edu.br/">IFFluminense</p>
 </body>
 </html>
