--- a/22-11-2019/menu.html
+++ b/22-11-2019/menu.html
@@ -2,19 +2,24 @@
 <html>
 <head>
 	<title>Exercício menu</title>
+	<meta charset="utf-8">
+	<meta name="author" content="Vítor Bernardo Sarmet">
+	<meta name="description" content="Menu">
+
 	<link rel="stylesheet" type="text/css" href="menu.css">
 </head>
 <body>
 	<ul class="menu_a">
-		<li> <a href="">Página inicial</a></li><li> <a href="">Feed RSS</a></li><li> <a href="">Fotos</a></li>
- 		<li> <a href="">Links</a></li>
- 	</ul>	
-
- 	<ul class="menu_b">
 		<li> <a href="">Página inicial</a></li>
  		<li> <a href="">Feed RSS</a></li>
  		<li> <a href="">Fotos</a></li>
  		<li> <a href="">Links</a></li>
  	</ul>
+
+	<ul class="menu_b">
+		<li> <a href="">Página inicial</a></li><li> <a href="">Feed RSS</a></li><li> <a href="">Fotos</a></li>
+ 		<li> <a href="">Links</a></li>
+ 	</ul>	
+
 </body>
 </html>
