--- a/P1/prova.html
+++ b/P1/prova.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 	<head>
 		<title>ProgNews</title>
 		<meta charset="utf-8">
@@ -12,7 +12,7 @@
 		<!-- Header -->
 		<header id="top">
 			<figure>
-				<img src="./img/logo.png" height="200" width="200">
+				<img src="./img/logo.png" height="200" width="200" alt="logo">
 			</figure>
 		</header>
 
@@ -52,7 +52,7 @@
 				</div>
 
 				<div class="box1-main">
-					<img src="./img/pg.png" height="200" width="200">
+					<img src="./img/pg.png" height="200" width="200" alt="Peter Gabriel">
 
 					<div class="news-main">
 						<p class="newstitle">Peter Gabriel back to Genesis</p>
@@ -100,7 +100,7 @@
 		<!-- Aside Esquerda -->
 		<aside class="aside-e">
 			<figure>
-				<img src="./img/welcome.png" height="100" width="100">
+				<img src="./img/welcome.png" height="100" width="100" alt="Frank Zappa">
 				<p>Welcome from
 				Prog Minister
 				Frank Zappa</p>
@@ -128,16 +128,16 @@
 		<!-- Aside Direita -->
 		<aside class="aside-d">
 			<figure class="main-spotlight">
-				<img src="./img/main.png" height="320" width="320">	
+				<img src="./img/main.png" height="320" width="320" alt="In the court of the Crimson King">	
 			</figure>
 
 			<figure class="small-spotlight">
-				<img src="./img/minor.png" height="100" width="100">
+				<img src="./img/minor.png" height="100" width="100" alt="Animals">
 				<p>New Pink Floyd Album Review</p>	
 			</figure>
 
 			<figure class="small-spotlight">
-				<img src="./img/minor2.png" height="100" width="100">
+				<img src="./img/minor2.png" height="100" width="100" alt="Tommy Bolin">
 				<p>Breaking news: Is Tommy Bolin still alive?</p>	
 			</figure>
 		</aside>
@@ -152,7 +152,7 @@
 			</ul>
 
 			<figure class="topo">
-				<a href="#top"><img src="./img/seta.png" height="20px" width="20px"></a>
+				<a href="#top"><img src="./img/seta.png" height="20" width="20" alt="seta"></a>
 				<a href="#top">Page Top</a>
 			</figure>
 
