--- a/P1/prova.html
+++ b/P1/prova.html
@@ -45,18 +45,19 @@
 
 		<!-- Main Section -->
 		<section>
-			<article class="box1">
-				<div class="box1-title">
-					<h2>Whats new?</h2>
-					<a href="#">More news</a>
-				</div>
+			<div class="box1-title">
+				<h2>Whats new?</h2>
+				<a href="#">More news</a>
+			</div>
 
+			<article class="box1">
+				
 				<div class="box1-main">
 					<img src="./img/pg.png" height="200" width="200" alt="Peter Gabriel">
 
 					<div class="news-main">
 						<p class="newstitle">Peter Gabriel back to Genesis</p>
-						<p class="data">19 February 1979</p>
+						<h4 class="data">19 February 1979</h4>
 						<p>After 5 years from his departure from the famous progressive rock band Genesis, singer and songwriter Peter Gabriel has broken the silence about Genesis, he's coming back to sing in their lastest album.
 						The current band leader and singer of the band, Phil Collins, who used to be the drummer when Peter Gabriel was in the band, says: "I'm tired of trying to be famous with prog rock, I think we should do more pop music based work, and Peter is coming back to help me do it".</p>
 					</div>
@@ -82,7 +83,7 @@
 			</article>
 
 			<article class="box2">
-				<div class="box1-title">
+				<div class="box1-title1">
 					<h2>Calendar</h2>
 					<a href="#">Events></a>
 				</div>
